<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/activity_profile_neighbour_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_profile.ProfileNeighbourActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundActivity">

        <!-- PROFILE IMAGE -->

        <android.support.design.widget.AppBarLayout
            android:id="@+id/activity_profile_neighbour_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- USER IMAGE -->

                <ImageView
                    android:id="@+id/activity_profile_neighbour_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_image_profile"
                    android:src="@drawable/ic_launcher_background"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <!-- TOOLBAR -->

                <android.support.v7.widget.Toolbar
                android:id="@+id/activity_profile_neighbour_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:background="@android:color/transparent"
                app:title="@string/app_name"
                app:titleTextColor="@android:color/transparent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

                <!-- USERNAME -->

                <TextView
                    android:id="@+id/activity_profile_neighbour_tv_name1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/cardview_margin_horizontal"
                    android:layout_marginEnd="@dimen/cardview_margin_horizontal"
                    android:paddingBottom="@dimen/bottom_padding_username_global"
                    android:text="@string/profile_username"
                    android:textSize="@dimen/size_title_username_global"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </android.support.constraint.ConstraintLayout>

        </android.support.design.widget.AppBarLayout>

        <!-- PROFILE -->

        <android.support.v7.widget.CardView
            android:id="@+id/activity_profile_neighbour_cv_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:cardCornerRadius="@dimen/cardview_corner_radius"
            app:cardElevation="@dimen/cardview_card_elevation"
            app:layout_constraintTop_toBottomOf="@id/activity_profile_neighbour_appbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- USERNAME -->

                <TextView
                    android:id="@+id/activity_profile_neighbour_tv_name2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/cardview_margin_horizontal"
                    android:layout_marginEnd="@dimen/cardview_margin_horizontal"
                    android:paddingTop="@dimen/top_padding_main_title"
                    android:paddingBottom="@dimen/bottom_padding_main_title"
                    android:text="@string/profile_username"
                    android:textSize="@dimen/text_size_main_title"
                    android:textColor="@color/mainTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- SEPARATOR -->

                <View
                    android:id="@+id/activity_profile_neighbour_v_separator1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_size_separator"
                    android:background="@color/separatorCardView"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/activity_profile_neighbour_tv_name2" />

                <!-- ICON ADDRESS -->

                <ImageView
                    android:id="@+id/activity_profile_neighbour_iv_icon_address"
                    android:layout_width="@dimen/size_icon"
                    android:layout_height="@dimen/size_icon"
                    android:layout_marginStart="@dimen/cardview_margin_horizontal"
                    android:layout_marginTop="@dimen/bottom_and_bottom_margin_other_title"
                    android:paddingTop="@dimen/top_padding_other_title"
                    android:paddingBottom="@dimen/bottom_padding_other_title"
                    android:paddingEnd="@dimen/end_padding_other_title"
                    android:src="@drawable/ic_room_white_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/activity_profile_neighbour_v_separator1" />

                <!-- ADDRESS -->

                <TextView
                    android:id="@+id/activity_profile_neighbour_tv_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_address"
                    android:textSize="@dimen/text_size_other_title"
                    android:textAlignment="textStart"
                    app:layout_constraintBottom_toBottomOf="@id/activity_profile_neighbour_iv_icon_address"
                    app:layout_constraintStart_toEndOf="@id/activity_profile_neighbour_iv_icon_address"
                    app:layout_constraintTop_toTopOf="@id/activity_profile_neighbour_iv_icon_address" />

                <!-- ICON PHONE -->

                <ImageView
                    android:id="@+id/activity_profile_neighbour_iv_icon_phone"
                    android:layout_width="@dimen/size_icon"
                    android:layout_height="@dimen/size_icon"
                    android:layout_marginStart="@dimen/cardview_margin_horizontal"
                    android:paddingTop="@dimen/bottom_padding_other_title"
                    android:paddingBottom="@dimen/bottom_padding_other_title"
                    android:paddingEnd="@dimen/end_padding_other_title"
                    android:src="@drawable/ic_call_white_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/activity_profile_neighbour_iv_icon_address" />

                <!-- PHONE -->

                <TextView
                    android:id="@+id/activity_profile_neighbour_tv_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_phone_number"
                    android:textSize="@dimen/text_size_other_title"
                    android:textAlignment="textStart"
                    app:layout_constraintBottom_toBottomOf="@id/activity_profile_neighbour_iv_icon_phone"
                    app:layout_constraintStart_toEndOf="@id/activity_profile_neighbour_iv_icon_phone"
                    app:layout_constraintTop_toTopOf="@id/activity_profile_neighbour_iv_icon_phone" />

                <!-- ICON URL -->

                <ImageView
                    android:id="@+id/activity_profile_neighbour_iv_icon_url"
                    android:layout_width="@dimen/size_icon"
                    android:layout_height="@dimen/size_icon"
                    android:layout_marginStart="@dimen/cardview_margin_horizontal"
                    android:layout_marginBottom="@dimen/bottom_and_bottom_margin_other_title"
                    android:paddingTop="@dimen/bottom_padding_other_title"
                    android:paddingBottom="@dimen/top_padding_other_title"
                    android:paddingEnd="@dimen/end_padding_other_title"
                    android:src="@drawable/ic_language_white_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/activity_profile_neighbour_iv_icon_phone"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <!-- URL -->

                <TextView
                    android:id="@+id/activity_profile_neighbour_tv_url"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_url"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/text_size_other_title"
                    app:layout_constraintBottom_toBottomOf="@id/activity_profile_neighbour_iv_icon_url"
                    app:layout_constraintStart_toEndOf="@id/activity_profile_neighbour_iv_icon_url"
                    app:layout_constraintTop_toTopOf="@+id/activity_profile_neighbour_iv_icon_url" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <!-- DESCRIPTIONS -->

        <android.support.v7.widget.CardView
            android:id="@+id/activity_profile_neighbour_cv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:cardCornerRadius="@dimen/cardview_corner_radius"
            app:cardElevation="@dimen/cardview_card_elevation"
            app:layout_constraintTop_toBottomOf="@id/activity_profile_neighbour_cv_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- BASIS TEXT VIEW -->

                <TextView
                    android:id="@+id/activity_profile_neighbour_tv_basic_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/cardview_margin_horizontal"
                    android:layout_marginEnd="@dimen/cardview_margin_horizontal"
                    android:paddingTop="@dimen/top_padding_main_title"
                    android:paddingBottom="@dimen/bottom_padding_main_title"
                    android:text="@string/profile_basic_text"
                    android:textSize="@dimen/text_size_main_title"
                    android:textColor="@color/mainTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <!-- SEPARATOR -->

                <View
                    android:id="@+id/activity_profile_neighbour_v_separator2"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_size_separator"
                    android:background="@color/separatorCardView"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/activity_profile_neighbour_tv_basic_text"/>

                <!-- INTRODUCTION -->

                <TextView
                    android:id="@+id/activity_profile_neighbour_tv_introduction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/cardview_margin_horizontal"
                    android:layout_marginEnd="@dimen/cardview_margin_horizontal"
                    android:paddingTop="@dimen/top_padding_other_title"
                    android:paddingBottom="@dimen/top_padding_other_title"
                    android:text="@string/profile_description"
                    android:textSize="@dimen/text_size_other_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/activity_profile_neighbour_v_separator2"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

    <!-- FAB -->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_profile_neighbour_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/activity_profile_neighbour_appbar"
        app:layout_anchorGravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:clickable="true"
        android:src="@drawable/ic_star_border_white_24dp"
        android:tint="@color/fab_favorite_is_false"
        app:backgroundTint="@color/backgroundFAB"/>

</android.support.design.widget.CoordinatorLayout>