<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.FavoriteFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_favorite_rv_list_neighbours"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/fragment_horizontal_margin"
        android:layout_marginEnd="@dimen/fragment_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/fragment_neighbour"/>

</android.support.constraint.ConstraintLayout>